changes configuration file setup to preserve local changes

--- a/src/parameters.js.dist
+++ b/src/parameters.js.dist
@@ -1,35 +1,23 @@
-let AppName        = 'Words!';
-
-// let clientId = '1_3il590peaz6sscok0go4c4c0wcwsgwccgwgs800ko0g4ww8w8k';
-// let clientSecret = '5y3sypwddvokocwwg4848gs884oos048g08wo4s84o8skoc8gc';
-
-let clientId       ='1_pwsblydjwtck8404g84w80s0ggsc08g4sggcw84ows8wgw84o';
-let clientSecret   = '1y1gn0xde3c0cw0gwcw8w84cksck0o4cog8ow84ko8so0o0408';
-let apiDomain      = 'http://words.avanzu.box';
-let loginUrl       = apiDomain + '/oauth/v2/token';
-let apiEndpoint    = apiDomain + '/api';
-let userInfoUrl    = apiEndpoint + '/user-info';
-let userProfileUrl = apiEndpoint + '/user-info/profile';
-let signUpUrl      = apiEndpoint + '/account/register';
-let anonymous      = {
-    'username' : 'Anonymous',
-    'anonymous': true
-};
-let pager          = {
-    pageSize: 10,
-    firtPage: 1
-};
-
 module.exports = {
-    AppName,
-    apiDomain,
-    loginUrl,
-    userInfoUrl,
-    signUpUrl,
-    userProfileUrl,
-    apiEndpoint,
-    client_id    : clientId,
-    client_secret: clientSecret,
-    anonymous,
-    pager
+    AppName        : 'Words',
+    // your oauth client id
+    client_id      : '',
+    //your oauth client secret'
+    client_secret  : '' ,
+    // api hostname
+    apiDomain      : '' ,
+    anonymous      : {
+        'username'  : 'Anonymous',
+        'anonymous' : true
+    },
+    pager          : {
+        pageSize  : 10,
+        firstPage : 1
+    },
+    get apiEndpoint()    { return this.apiDomain + '/api' },
+    get loginUrl(){ return this.apiDomain   + '/oauth/v2/token' },
+    get userInfoUrl() { return  this.apiEndpoint + '/user-info' },
+    get signUpUrl() { return this.apiEndpoint + '/account/register' },
+    get userProfileUrl() { return apiEndpoint + '/user-info/profile' }
 };
+
